--- a/app/(home)/Home.module.css
+++ b/app/(home)/Home.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; remove because it made screen unscrollable when content is higher then 100vh */
 }
 
 .main {
